# Real_estate_analyses

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
backend/: pyproject.toml
backend/outputs/data/: 0c9476e7_listing.json  1c02bfbc_listing.json  36fa374a_listing.json  50ddd766_listing.json  55ae2437_listing.json  57337e75_listing.json  9bbe8900_listing.json  adffec22_listing.json  eaf747a1_listing.json  f925ff84_listing.json  fe700b4d_listing.json  ff24f0ca_listing.json
backend/scripts/: compare_approaches.py  compare_ltr_approaches.py
backend/src/: config.py  main.py  models.py
backend/src/analyzers/: capital_growth.py  ltr_revenue.py  roi.py  str_revenue.py
backend/src/filters/: property_filter.py
backend/src/reporters/: pipeline.py
backend/src/scrapers/: claude_ltr_estimator.py  fotocasa_scraper.py  idealista.py  link_scraper.py
backend/tests/: conftest.py  test_capital_growth.py  test_claude_ltr_estimator.py  test_config.py  test_filter.py  test_fotocasa_scraper.py  test_idealista.py  test_link_scraper.py  test_ltr_revenue.py  test_models.py  test_roi.py  test_str_revenue.py
docs/: vibe-coding-process.md
docs/example/: example_analysis.json
docs/plans/: 2026-04-15-multi-agent-system.md  2026-04-30-multi-agent-system-v2.md  2026-04-30-pre-implementation-decisions.md  2026-05-03-link-analysis-spike.md  2026-05-03-link-based-analysis-design.md  2026-05-03-link-based-pipeline-design.md  2026-05-03-link-based-pipeline.md  2026-05-03-spike-results.md
frontend/: package-lock.json  package.json  vite.config.ts
(+11 files in other folders)
